# meta-hybrid_mount

./: .hintrc  AGENTS.md  Cargo.toml  README.md  README_ES.md  README_IT.md  README_JP.md  README_RU.md  README_UK.md  README_VI.md  README_ZH.md  README_ZH_TW.md  build.rs  changelog.md  update-lite.json  update-nano.json  update.json
.github/ISSUE_TEMPLATE/: blacklist_request.yml
.github/docker/ci/: Dockerfile
.github/workflows/: auto-blacklist-pr.yml  auto-label.yml  build-full.yml  build.yml  ci-image.yml  kasumi-lkm.yml  license_header.yml  lints.yml  notify.yml  release.yml
docs/: AGENTS.md  README.md  README_ES.md  README_IT.md  README_JP.md  README_RU.md  README_UK.md  README_VI.md  README_ZH.md  README_ZH_TW.md
module/: config.toml  customize.sh  metainstall.sh  metamount.sh  module_blacklist.toml
src/: defs.rs  main.rs  partitions.rs
src/conf/: cli.rs  loader.rs  schema.rs  store.rs
src/conf/cli_handlers/: api.rs
src/core/: backend_capabilities.rs  cli_commands.rs  controller.rs  kasumi_coordinator.rs  module_status.rs  recovery.rs  runtime_finalization.rs  runtime_state.rs
src/core/api/: kasumi.rs  modules.rs  system.rs
src/core/daemon/: client.rs  mod.rs  protocol.rs  server.rs
src/core/daemon/server/: commands.rs  http.rs
src/core/inventory/: discovery.rs  mod.rs
src/core/ops/: mod.rs  plan.rs  prepare.rs  prepare_old.rs
src/core/ops/executor/: fallback.rs  magic.rs  mod.rs  overlay.rs
src/core/ops/prepare/: coordinator.rs  dir_walker.rs  mod.rs  module_processor.rs  plan_builder.rs  tests.rs  types.rs
src/core/startup/: mod.rs
src/core/startup/recovery/: mod.rs  skip_markers.rs
src/core/storage/: ext4.rs  mod.rs
src/domain/: mod.rs
src/mount/: node.rs  umount_mgr.rs
src/mount/kasumi/: compile.rs  runtime.rs  status.rs
src/mount/magic_mount/: mod.rs  utils.rs
src/mount/overlayfs/: overlayfs.rs  utils.rs
src/sys/: kasumi.rs  kasumi_uapi.h  lkm.rs  mount.rs  nuke.rs
src/sys/fs/: file.rs  mod.rs  xattr.rs
src/utils/: mod.rs  path.rs  sync.rs  validation.rs
tests/: integration_test.rs
tools/notify/: Cargo.toml
tools/notify/src/: lib.rs  main.rs
webui/: README.md  README.zh-CN.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
webui/src/: App.tsx  app.css  init.ts  layout.css  main.tsx  material-web.d.ts
webui/src/components/: BottomActions.tsx  NavBar.css  NavBar.tsx  Skeleton.css  Skeleton.tsx  Toast.css  Toast.tsx  TopBar.css  TopBar.tsx
webui/src/lib/: api.mock.test.ts  api.mock.ts  api.ts  constants.ts  cookies.ts  features.ts  infoTabData.ts  moduleMode.test.ts  types.ts
webui/src/lib/api/: contracts.ts  schemas.ts
webui/src/lib/api/codec/: configCodec.ts  runtimeCodec.ts
webui/src/lib/api/core/: bridge.test.ts  bridge.ts  error.ts  guards.ts  shell.ts  validation.ts
webui/src/lib/api/repos/: configRepo.ts  runtimeRepo.ts
webui/src/lib/api/services/: kasumiService.ts  moduleService.test.ts  moduleService.ts  systemService.ts
webui/src/lib/stores/: configStore.ts  kasumiStore.ts  moduleStore.ts  sysStore.ts  uiStore.ts
webui/src/locales/: en-US.json  es-ES.json  id-ID.json  it-IT.json  ja-JP.json  ru-RU.json  uk-UA.json  vi-VN.json  zh-CN.json  zh-TW.json
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  InfoTab.tsx  KasumiTab.css  KasumiTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
webui/src/routes/KasumiTab/: FeaturesSection.tsx  HeroCard.tsx  IdentitySection.tsx  LkmSection.tsx  MapsSection.tsx  RuntimeSection.tsx  SectionShell.tsx  UserHideSection.tsx  index.tsx  types.ts  utils.ts
xtask/: Cargo.toml
xtask/src/: main.rs
