# Copyright (C) 2026 YuzakiKokuban <heibanbaize@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = ["xtask", "tools/notify"]
resolver = "2"

[package]
name = "hybrid-mount"
version = "4.1.3"
edition = "2024"
description = "Waiting for daemon..."
authors = ["Hybrid Mount Developers"]
license = "Apache-2.0"
readme = "docs/README.md"
repository = "https://github.com/Hybrid-Mount/meta-hybrid_mount"

[package.metadata.hybrid_mount]
name = "Hybrid Mount"
update = "https://raw.githubusercontent.com/Hybrid-Mount/meta-hybrid_mount/main/update.json"
lite_name = "Hybrid Mount Lite"
lite_update = "https://raw.githubusercontent.com/Hybrid-Mount/meta-hybrid_mount/main/update-lite.json"
nano_name = "Hybrid Mount Nano"
nano_update = "https://raw.githubusercontent.com/Hybrid-Mount/meta-hybrid_mount/main/update-nano.json"

[features]
default = ["kasumi", "control-plane"]
kasumi = ["control-plane"]
control-plane = ["dep:clap"]

[dependencies]
anyhow = "1"
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"], optional = true }
extattr = "1"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
walkdir = "2.5"
log = "0.4"
flate2 = "1.1"
fastrand = "2.4"
glob = "0.3"
tempfile = "3.27"
signal-hook = "0.4"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = { version = "0.11.10", default-features = false }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.18"
ksu = { git = "https://github.com/Tools-cx-app/ksu.git", version = "0.2.0" }
loopdev = { git = "https://github.com/Hybrid-Mount/loopdev.git", version = "0.5.0" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[profile.release]
overflow-checks = true
codegen-units = 1
lto = "fat"
opt-level = "z"
strip = true
panic = "abort"

[build-dependencies]
anyhow = "1"
bindgen = "0.72"
semver = "1"
serde = { version = "1.0", features = ["serde_derive"] }
toml = "1.1"
