# Copyright (C) 2026 YuzakiKokuban <heibanbaize@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
fs_extra = "1.3"
hybrid-mount-notify = { package = "notify", path = "../tools/notify" }
semver = "1"
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.1.2"
zip = "8.6.0"

[dev-dependencies]
tempfile = "3.27"
