# Copyright (C) 2026 Hybrid Mount Developers
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "notify"
version = "0.1.0"
edition = "2024"
description = "Telegram notification helper for Hybrid Mount build artifacts"
authors = ["Hybrid Mount Developers"]
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.102"
tgbot = "0.46.0"
tokio = { version = "1.52.1", features = ["full"] }
