# Copyright (C) 2026 YuzakiKokuban <heibanbaize@gmail.com>
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "notify"
version = "0.1.0"
edition = "2024"
description = "Telegram notification helper for Hybrid Mount build artifacts"
authors = ["Hybrid Mount Developers"]
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.102"
tgbot = "0.46.0"
tokio = { version = "1.52.1", features = ["full"] }
